[package]
name = "questrade-rs"
version = "0.1.1"
authors = ["Curtis Jones <mail@curtisjones.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Oxidized Questrade Client"
categories = ["web-programming::http-client"]
keywords = ["api", "finance", "stock", "questrade"]
repository = "https://github.com/ikubetoomuzik/questrade-rs"
readme = "README.md"

[dependencies]
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
chrono = { version = "0.4" , features = ["serde"] }
itertools = "0.9"
thiserror = "1"
http = "0.2"
serde_with = "1"

[dev-dependencies]
mockito = "0.27.0"
